client/css/custom.less
/* ... */
/* Image-upload style(organization) */
.profile-block {
	position: relative;
	.close-block {
		position: absolute;
		right: -4px;
		top: -5px;
		&.h6 {
			padding: 0;
		}
	}
}
.drag-box {
	border: 2px dashed transparent;
	&:hover {
		border-color: lighten(@gray-light,25%);
	}
}
.drag-drop {
	display: none;
	.square(0);
	z-index: -1;
}
.drophover {
	position: relative;
	.drag-drop {
		background: rgba(255,255,255,0.7);
		bottom: 0;
		top: 0;
		left: 0;
		right: 0;
		display: block;
		font-size: 20px;
		font-weight: 700;
		line-height: 30px;
		padding: 200px 50px;
		position: absolute;
		text-align: center;
		.square(auto);
		z-index: 4;
		&.drag-drop-sm {
			padding: 105px 20px;
		}
	}
}
/* Full view pop-out style */
.popped-out {
	textarea.form-control {
		height: 150px;
	}
	ul.card-view-mn {
		float: none !important;
		.text-center {
			text-align: right;
		}
		li.dropdown {
			width: 100%;
			padding-right: 0px;
			a {
				display: none;
				&.js-add-card-member, &.js-remove-card-member {
					display: block;
					margin-left: 90px;
				}
			}
			ul.dropdown-menu {
				display: block;
				position: static;
				background: none;
				border: none;
				box-shadow: none;
				float: none;
				width: 100% !important;
				&.arrow-bottom:after, &.arrow-bottom:before {
					border: 0;
				}
				>li {
					.divider {
						display: none;
					}
					>div {
						&:first-child {
							width: 10%;
							padding-left: 0;
							margin-left: -15px;
							text-align: left;
						}
						&:last-child {
							float: left;
							width: 90%;
							padding: 0;
						}
						.form-group {
							.col-xs-12 {
								width: 100%;
								padding: 0;
							}
						}
					}
					&.small {
						div {
							&:last-child {
								left: 9%;
							}
						}
					}
				}
			}
		}
		.label-max {
			width: 100%;
			padding: 0;
			text-align: right;
		}
		.form-horizontal .form-group {
			margin-left: 0;
			margin-right: 0;
		}
		.duedate {
			margin-top: 20px;
			width: 100%;
			.form-group {
				.input-group {
					display: table;
					width: 90.5%;
					.input-group-addon {
						background-color: #eeeeee;
						border: 1px solid #cccccc;
						display: table-cell;
						width: 1%;
						&:first-child {
							border-right: 0;
						}
					}
				}
				.form-control, .control-label {
					display: block;
				}
				.control-label {
					width: 8.7%;
					text-align: left;
				}
			}
		}
	}
	.editor {
		.ui-resizable-e {
			background-position: center 20%;
		}
	}
	.full-form {
		margin-left: -15px;
		padding: 0;
		width: 102.6%;
	}
}
/* Dockmodal style */
.dockmodal {
	bottom: initial;
	margin-bottom: -4px;
}
.dockmodal-body {
	.dockmodal-phone {
		.phone-content {
			display: table-cell;
			height: 100%;
			vertical-align: middle;
		}
		.phone-text p {
			margin-top: 25px;
		}
	}
}
.dockheader-dropdown {
	margin: -43px 0 0 9px;
	z-index: 2;
	position: fixed;
	i {
		color: #000;
	}
}
.dockmodal-header {
	background-color: #eeeeee !important;
	border-bottom: 1px solid #dedede;
	i {
		color: #000;
	}
}
.title-text {
	color: #000 !important;
	.card-id {
		padding-left: 5px;
		padding-right: 5px;
		margin-right: 5px;
		margin-top: 3px;
		background: @brand-primary;
		color: #ffffff;
		line-height: 20px;
	}
}
.dockheader-loader {
	margin: -42px 0 0 -80px;
	position: fixed;
	z-index: 2;
}
.comment-block {
	overflow: visible;
	position: relative;
}
.card-list-placeholder {
	margin-bottom: 20px;
	min-height: 40px;
	background: #eee;
	border: 1px dashed #c2c2c2;
	border-radius: 3px;
	.box-shadow(0 1px 1px rgba(0,0,0,.05));
}
.attachment-list {
	>li {
		width: 212px;
		float: left;
		margin-right: 20px;
		min-height: 240px;
		> a {
			height:150px;
		}
		img {
			width: 100%;
		}
	}
}
.tab-content .modal-body section a {
	word-wrap: break-word;
}
.duedate {
	.form-group {
		.input-group {
			display: block;
			.input-group-addon {
				background: none;
				border: 0;
				display: block;
				width: auto;
			}
		}
		.form-control, .control-label {
			display: none;
		}
	}
}
.modal-title {
	line-height: 1.42857;
	margin: 0;
}
.splitter-wrap {
	min-height: 170px;
	float: left;
	height: auto !important;
	padding: 0 10px;
}
.editor {
	.ui-resizable-e {
		background: url(../img/split.gif)#eeeeee no-repeat center 10%;
		width: 4px;
		right: -2px;
		z-index: 2 !important;
		padding: 2px;
	}
}
div.popped-out + div + div.datetimepicker {
	left: 217.4px !important;
}
.ui-sortable-helper {
	font-smoothing: antialiased;
	.rotate(3deg);
	.transition(transform .02s ease);
	-webkit-font-smoothing: antialiased;
	-webkit-backface-visibility: hidden;
	&.panel {
		.box-shadow(0 1px 1px rgba(0,0,0,0.15));
	}
}
.datepicker-dropdown {
	&.datetimepicker-dropdown-bottom-right {
		margin-left: -60px;
		&:before {
			left: 50%;
		}
		&:after {
			left: 50.5%;
		}
	}
}
/* specific style */
.row-flex {
	display: flex;
	flex-direction: row;
	flex: 0 0 100%;
}
.col-flex {
	display: flex;
	flex-direction: column;
	&.col-flex1 {
		flex: 0 0 40%;
		overflow: hidden;
	}
	&.col-flex2 {
		flex: 0 0 80%;
	}
	&.col-flex3 {
		flex: 0 0 100%;
	}
	&.col-flex2, &.col-flex3 {
		background: none;
		.open a, a:focus {
			background: none;
		}
	}
}
.emoji {
	width: 1.5em;
	height: 1.5em;
	display: inline-block;
	margin-bottom: -0.25em;
}
.atMention {
	background: #d6dadc;
	padding: 1px 4px;
	margin: -1px 0;
}
.thumb-img {
	display: table-cell;
	line-height: 134px;
	font-size: 35px;
	font-weight: bold;
	text-align: center;
	vertical-align: middle;
	.size(202px,151px);
	color: lighten(@gray-light,20%);
	.img-responsive {
		max-height: 100%;
		display: inline-block;
	}
}
.preview-thumbnail {
	background-size: cover;
	border-radius: 3px;
	display: block;
	float: left;
	margin-right: 5px;
	margin-top: 6px;
	.opacity(0.8);
	.square(16px);
	z-index: 2;
	& + .navbar-btn {
		.btn-block {
			width: 70%;
		}
	}
}
.card-label-show {
	.htruncate {
		width: 150px;
		float: left;
	}
}
.label-block {
	.card-label-show {
		.htruncate {
			width: 110px;
		}
	}
}
/* ... */

